# project11

./: .gitignore  .gitmodules  CMakeLists.txt  Project11_ROS_Reconfigure.bash  README.md  Replay_and_extract_images_from_bag.md  SettingUpASimulationEnvironment.md  SettingUpMystique.md  Using_the_AutonomousMissionPlanner_with_CW4.md  autostart_mystique.bash  build.bash  get_packages.bash  git_pull.bash  git_push_upstream.bash  git_status.bash  hosts.txt  package.xml
.github/workflows/: ros-base-docker.yml  ros.yml
catkin_ws/src/: visualizer.py
catkin_ws/src/project11/: CMakeLists.txt  logs  package.xml  setup.py
catkin_ws/src/project11/include/project11/: gz4d_geo.h  utils.h
catkin_ws/src/project11/launch/: all_panos.launch  ben.launch  ben_gazebo_joystick.launch  camera_color.launch  camera_flir.launch  controller_logger.launch  controller_test.launch  johnny5_ais_base.launch  kongsberg_ben.launch  local_bridge_for_replay.launch  mystique.launch  observer_mystique_cobham.launch  operator_core.launch  operator_drix.launch  operator_mystique_nautilus.launch  operator_mystique_rvgs.launch  operator_ui.launch  operator_zboat.launch  pano.launch  remote_operator.launch  sim_ben_sandisland.launch  sim_demo.launch  sim_echo.launch  sim_local.launch  sim_local_cw4.launch  sim_minimal.launch  test_posmv.launch  vehicle_core.launch  vehicle_zboat.launch  zboat_camera.launch
catkin_ws/src/project11/parameters/: ben.yaml  cobham.yaml  drix_rvgs_operator.yaml  echo.yaml  kongsberg_ben.yaml  mobile_lab.yaml  mystique.yaml  nautilus_observer.yaml  operator.yaml  sim_unh_pier.yaml  vehicle.yaml  zboat.yaml
catkin_ws/src/project11/parameters/ben/: pano_1.yaml  pano_2.yaml  pano_3.yaml  pano_4.yaml  pano_5.yaml  pano_6.yaml
catkin_ws/src/project11/src/: utils.cpp
catkin_ws/src/project11/src/project11/: __init__.py  wgs84.py
config/: operator.yaml  robot.yaml  vehicle.yaml
config/repos/: project11_all.repos  project11_core.repos  sim_demo.repos  sim_demo_gfoe.repos  simulator.repos
configuration/: README.md  hosts.txt  mbr_mac_routes_operator_2510.json  mbr_mac_routes_vehicle_9372.json
configuration/ben/: mystique_wired_network.yaml
doc/: ABCD  Installation.md
docker/: Dockerfile  build.bash  run.bash
documentation/: Installation.md  README.md  SettingUpASimulationEnvironment.md  Using_the_AutonomousMissionPlanner_with_CW4.md
documentation/notes/: DRIX_notes.txt  echo_notes.md  git.md  record_pano_cameras.txt  wireless_cli.md
include/project11/: gz4d_geo.h  mutex_protected_bag_writer.h  pid.h  tf2_utils.h  utils.h
launch/: camera_flir_engine.launch  camera_johnny5.launch  camera_johnny5_tunnel.launch  controller_test.launch  drix_backseat.launch  drix_sim.launch  echo.launch  local_remote_operator.launch  mavros_sim.launch  mystique.launch  navio.launch  observer_core.launch  observer_mystique_cobham.launch  old_nav_stack.launch  operator_core.launch  operator_drix.launch  operator_echo.launch  operator_loggers.launch  operator_loggers_mystique.launch  operator_mobile_lab.launch  operator_mystique.launch  operator_mystique_cobham.launch  operator_mystique_mobile_lab.launch  operator_mystique_nautilus.launch  operator_mystique_rvgs.launch  operator_ui.launch  platform.launch  platform_nav_source.launch  remote_operator.launch  robot_core.launch  sim_ben_sandisland.launch  sim_demo.launch  sim_echo.launch  sim_local.launch  sim_local_cw4.launch  sim_local_flexbe.launch  sim_local_sm.launch  sim_path_planner_local.launch  test_posmv.launch  vehicle_core.launch  (+3 more)
nodes/: platform_send.py
notes/: DRIX_notes.txt  echo_notes.md  git_peer2peer.md  git_submodules.md  mbr.md
parameters/: fairweather_observer.yaml  fairweather_operator.yaml  mystique.yaml  nautilus_operator.yaml  rvgs_operator.yaml  sim_unh_pier.yaml
project11/: nav.py
repos/: sim_demo.repos
ros/camera_info/: pano_1.yaml  pano_2.yaml  pano_3.yaml  pano_4.yaml  pano_5.yaml  pano_6.yaml
rviz/: transforms.rviz
scripts/: README.md  ais_sender.py  aishub_sender.py  autostart_mystique.bash  bellypackalarm.sh  git_pull.bash  git_pull_upstream.bash  git_sync_forked_from_remote.bash  install_prereq_packages.bash  mystique_rqt.bash  p11_repo_manager.py  record_pano_cameras.bash  send_pid.bash  send_thumbnails.bash  send_to_remote.bash  shutdown_test.py  start_roscore.sh  start_roslaunch_mystique.sh  start_rosmon_mystique.sh  start_tmux.sh  start_tmux_operator.sh  update_time_ntpdate.bash
src/project11/: __init__.py  geodesic.py  nav.py  wgs84.py
(+5 files in other folders)
