<package format="2">
  <name>project11</name>
  <version>0.0.0</version>
  <description>The Project 11 package</description>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>command_bridge</exec_depend>
  <depend>geographic_visualization_msgs</depend>
  <exec_depend>udp_bridge</exec_depend>
<!--   <exec_depend>dubins_curves</exec_depend> -->

</package>
