<package format="2">
  <name>project11</name>
  <version>0.0.0</version>
  <description>The Project 11 package</description>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  
</package>
